fix: update body background color to black for better contrast

--- a/src/css/adventure-kid-video-jockey.css
+++ b/src/css/adventure-kid-video-jockey.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-	background-color: rgb(124, 124, 124);
+	background-color: #000000;
 	cursor: none;
 	height: 100%;
 	margin: 0;
